--- a/views/recruiting.xml
+++ b/views/recruiting.xml
@@ -73,6 +73,7 @@
                                 <field name="interview_date"/>
                                 <field name="hired"/>
                                 <field name="number_of_positions"/>
+                                <field name="dummy"/>
                             </group>
                         </group>
                     </sheet>
@@ -116,6 +117,13 @@
                         <group>
                             <group string="General">
                                 <field name="partner_name"/>
+                                <field name="active"/>
+                                <field name="partner_id"/>
+                                <field name="hired"/>
+                                <field name="email_from"/>
+                                <field name="partner_phone"/>
+                                <field name="partner_mobile"/>
+                                <field name="position_ids"/>
                             </group>
                         </group>
                         <notebook position="inside">
@@ -129,6 +137,16 @@
                         </notebook>
                     </sheet>
                 </form>
+            </field>
+        </record>
+
+        <record model="ir.ui.view" id="applicant_tree_view">
+            <field name="name">applicant.tree</field>
+            <field name="model">hr_recruiting.applicant</field>
+            <field name="arch" type="xml">
+                <tree string="Applicant Tree">
+                    <field name="partner_name"/>
+                </tree>
             </field>
         </record>
 
